--- a/mytest.html
+++ b/mytest.html
@@ -1,78 +1,168 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="description" content="">
+   <meta property="og:title" content="우리딸 결혼합니다(천현정♥한영후)"/>
+   <meta property="og:url" content="https://elena0802.github.io/bride-wedding"/>
+   <meta property="og:description" content="7월 9일 오후 6시 시그니엘 호텔"/>
+   <meta property="og:image" content="images/kakaothum.jpeg"/>
+   <meta property="og:image:type" content="image/jpeg"/>
+   <meta property="og:image:width" content="1600"/>
+   <meta property="og:image:height" content="800"/>
+   <meta property="og:type" content="website"/>
+   <title>영후 &amp; 현정</title>
+   
+   <link rel="icon" href="images/favicon.jpg">
+   <!-- Bootstrap -->
+ <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
+   
+   <!-- Flexslider -->
+   <link rel="stylesheet" href="css/flexslider/flexslider.css" type="text/css">
+   <!-- Animate -->
+   <link rel="stylesheet" href="css/animate/animate.css" type="text/css">       
+   <!-- Countdown -->
+   <link rel="stylesheet" href="css/countdown/jquery.countdown.css" type="text/css">
+   <!-- Magnific Popup -->
+   <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css" type="text/css">
+   <!-- Owl Carousel -->
+   <link rel="stylesheet" href="css/owlcarousel/owl.carousel.css" type="text/css">
+   <link rel="stylesheet" href="css/owlcarousel/owl.theme.css" type="text/css">
+   <!-- Icon -->
+   <link rel="stylesheet" href="css/fonts/fontello/css/fontello.css" type="text/css" media="screen" />
+   <link rel="stylesheet" href="css/all.css" type="text/css" rel="stylesheet"/>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <!-- Font -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Yantramanav:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
+   <link href="https://hangeul.pstatic.net/hangeul_static/css/maru-buri.css" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Yeseva+One&display=swap" rel="stylesheet">
 
+   
+   <!-- Theme CSS -->
+ <link href="css/style.css" rel="stylesheet" media="screen">
+   
+   <!-- Skin CSS -->
+ <link href="css/skin/pink/pink.css" rel="stylesheet" media="screen">
+   <!--<link href="css/skin/light-teal/light-teal-reverse-navbar.css" rel="stylesheet" media="screen">-->
+<!--         <link href="css/skin/pattern/pattern-1.css" rel="stylesheet" media="screen"> -->
+   
+   <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+  
+   
 <style>
-  .box01{
-            text-align: center;
-        }
-  .box01 input{
-            border: none;
-            font-size: 15px;
-            outline: none;
-            text-align: center;
-        }
-  .box01 button{
-            border:none;
-            width:100px;
-            height: auto;
-            vertical-align: bottom;
-        }
-  .box01 button img{
-            width: 100%;
-        }
+  body {
+  font-family: "Abril Fatface", cursive;
+  font-size: 1.2em;
+  background: #ffe7e9
+    url("https://images.unsplash.com/photo-1456271390536-693558280c8f?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=996&q=80&cs=tinysrgb")
+    no-repeat center center fixed;
+  background-size: cover;
+  color: #ddd;
+}
+.datepicker {
+  width: 475px;
+  background: #fdfdfd;
+  border-radius: 10px;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.2), 0 15px 12px rgba(0, 0, 0, 0.2);
+  margin: 15px auto;
+  overflow: hidden;
+}
+
+.datepicker .datepicker-header {
+  height: 250px;
+  background-image: url("https://images.unsplash.com/photo-1441205337478-70cb1521e35a?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
+  background-size: 100%;
+}
+.datepicker .ui-datepicker-inline {
+  padding: 30px;
+}
+.datepicker .ui-datepicker-header {
+  text-align: center;
+  font-size: 1.4em;
+  padding-bottom: 0.5em;
+  letter-spacing: 0.1em;
+  color: #333;
+}
+.datepicker .ui-datepicker-header .ui-datepicker-prev,
+.datepicker .ui-datepicker-header .ui-datepicker-next {
+  float: left;
+  cursor: pointer;
+  font-size: 1.4em;
+  padding: 0 5px;
+  margin-top: -8px;
+  color: #ddd;
+  transition: 0.6s;
+}
+.datepicker .ui-datepicker-header .ui-datepicker-next {
+  float: right;
+}
+.datepicker .ui-datepicker-header .ui-datepicker-prev:hover {
+  transform: translateX(-25px);
+}
+.datepicker .ui-datepicker-header .ui-datepicker-next:hover {
+  transform: translateX(25px);
+}
+.datepicker .ui-datepicker-calendar {
+  width: 100%;
+  text-align: center;
+}
+.datepicker .ui-datepicker-calendar thead {
+  color: #ddd;
+}
+.datepicker .ui-datepicker-calendar tr th,
+.datepicker .ui-datepicker-calendar tr td {
+  padding-bottom: 0.4em;
+}
+.datepicker .ui-datepicker-calendar a {
+  color: #333;
+  text-decoration: none;
+  display: block;
+  margin: 0 auto;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+.datepicker .ui-datepicker-calendar a:hover {
+  background: #da89a2;
+  color: #fff;
+  transition: 0.7s;
+  transform: scale(1);
+}
+.datepicker .ui-datepicker-calendar .ui-state-highlight {
+  background: #da89a2;
+  color: #fff;
+}
+.datepicker .ui-datepicker-calendar .ui-state-highlight:hover {
+  color: #fff;
+}
 
 </style>
 </head>
 
 <body>
-  <p class="box01">
-    <input value="신한은행 110355642330 천현정" readonly>
-      <button onclick="copy_to_clipboard(event)">
-        <img src="https://blog.kakaocdn.net/dn/N1wUc/btqIl7XZtKM/b44qX9Six1vczz2ISWj4LK/img.png" alt="복사하기">
-      </button>
-    </p>       
-    <p class="box01">
-        <input value="국민은행 1234567890 테스트" readonly>
-        <button onclick="copy_to_clipboard(event)">
-          <img src="/wedding-invitation/images/pattern/payment_icon_yellow_large.png" alt="복사하기">
-        </button>
-    </p>  
+  <div class="datepicker">
+    <div class="datepicker-header"></div>
+  </div>
 
   <script>
-    function copy_to_clipboard(event) {    
-    var copyText = event.target.parentNode.previousElementSibling;
-    copyText.select();
-    copyText.setSelectionRange(0, 99999);
-    document.execCommand("Copy");
-    alert('계좌번호가 복사되었습니다');
-  }     
+    $(document).ready(function () {
+  $(".datepicker").datepicker({
+    prevText: '<i class="fa fa-fw fa-angle-left"></i>',
+    nextText: '<i class="fa fa-fw fa-angle-right"></i>'
+  });
+});
 
   </script>
-
-
-
-
-
-
-
-<button onclick="copyToClipboard()">Copy account</button>
-
-<script>
-function copyToClipboard(text) {
-var inputc = document.body.appendChild(document.createElement("input"));
-inputc.value = ('신한은행 110355642330 천현정');
-inputc.focus();
-inputc.select();
-document.execCommand('copy');
-inputc.parentNode.removeChild(inputc);
-alert("URL Copied.");
-}
-</script>
-
-<br>
-<button onclick="prompt('Press Ctrl',window.location.href)">Copy Link</button>
-
 </body>
 </html>
