background color update

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
      	<meta content="width=device-width, initial-scale=1.0" name="viewport">
      	<meta name="description" content="">
-        <meta property="og:title" content="우리딸 결혼합니다(천현정♥한영후)"/>
+        <meta property="og:title" content="천현정♥한영후, 우리딸 결혼합니다"/>
         <meta property="og:url" content="https://elena0802.github.io/bride-wedding"/>
-        <meta property="og:description" content="7월 9일 오후 6시 시그니엘 호텔"/>
+        <meta property="og:description" content="7월 9일 토요일 오후 6시 시그니엘 호텔"/>
         <meta property="og:image" content="images/kakaothum.jpeg"/>
         <meta property="og:image:type" content="image/jpeg"/>
         <meta property="og:image:width" content="1600"/>
