--- a/story.html
+++ b/story.html
@@ -13,20 +13,25 @@
         </div>    
 
         <!-- INTERVIEW -->
-        <div class="animation fadeInUp">
+        <div class="story-qna animation fadeInUp">
             <p><span class="qna-title">Q. 결혼을 앞둔 소감</span></p>
             <p>🤵🏻 신랑 한영후<br>저, 드디어 장가갑니다! 오랜 시간 제 옆에서 함께 해주었던 사람과 이젠 매일을 함께할 수 있다고 생각하니 행복합니다. 저희 평생토록 잘 살겠습니다!</p>
             <p>👰🏻‍♀️ 신부 천현정<br>함께한 시간들이 행복했던 만큼 앞으로의 날들이 기대됩니다. 인생의 큰 전환점이 될 거라고 생각하고요. 앞으로도 서로 배려하고 사랑하면서 잘 살아보겠습니다!</p>
-
+        </div>
+        <div class="animation fadeInUp">
             <p> <span class="qna-title">Q. 결혼을 결심한 계기</span></p>
             <p>🤵🏻 신랑 한영후<br>이 세상에 이 사람보다 나를 더 잘 이해하는 사람은 없을거라는 확신이 들어서 결혼을 결심했습니다.</p>
             <p>👰🏻‍♀️ 신부 천현정<br>인생에 어떤 어려운 문제가 주어져도 함께 풀어나갈 수 있을 것 같다는 믿음이 생겨 결혼을 결심했습니다.</p>
-
+        </div>
+        <div class="animation fadeInUp">
             <p><span class="qna-title">Q. 우리가 사랑한 시간</span></p>
             <p>때로는 연인으로, 때로는 친구로, 때로는 동지로, 껌딱지처럼 어디든 손잡고 같이 다녔습니다. 매일 봐도 할말이 많았고, 가고 싶은 곳들이 많았어요. 서로의 인생을 살아오며 달랐던 두 사람이 서로 덕분에 가장 행복하게 웃었고 함께 할 내일이 끊임없이 설레었습니다.</p>
-
+        </div>
+        <div class="animation fadeInUp">
             <p><span class="qna-title">Q. 함께 준비하는 새로운 시작</span></p>
             <p>하루하루 설레는 마음으로 결혼을 준비하고 있습니다. 발리로 5박 6일 신혼여행을 다녀온 뒤, 행복동 소재의 행복마을 아파트에서 달달한 신혼 생활을 시작합니다. 언제나 열려있으니 놀러오세요!</p>
+        </div> 
+        <div class="animation fadeInUp">
             
             <p> <span class="qna-title">Q. 전하고 싶은 이야기</span></p>
             <p>한영후 & 천현정, 저희 두 사람의 소중한 날을 위해 귀한 걸음을 해주실 분들을 생각하며 정성스럽게 준비했습니다. 특별한 하루에 함께 하셔서 축하의 마음을 전해주세요! 저희의 시작을 응원해주시는 따뜻한 진심을 감사히 오래도록 간직하겠습니다.</p>
