gift btn color update

--- a/index.html
+++ b/index.html
@@ -1172,14 +1172,14 @@
                                 </script>
                             </div>
                             <div class="address-info">
-                                <div class="de-icon circle small-size inline" style="background-color: #ddc1c6;">
+                                <div class="de-icon circle small-size inline" style="background-color: #d0bbbb;">
                                     <i class="fas fa-map-marker-alt"></i>
                                 </div>
                                 <h3 class="inline">서울시 송파구 올림픽로 300</h4>
                             </div>
                             <div class="address-info">
 
-                                <div class="de-icon circle small-size inline" style="background-color: #ddc1c6;">
+                                <div class="de-icon circle small-size inline" style="background-color: #d0bbbb;">
                                     <i class="fas fa-phone"></i>
                                 </div>
                                 <h3 class="inline">02-3213-1000</h3>
@@ -1289,7 +1289,7 @@
                                                     address: '서울 송파구 올림픽로 300',
                                                     addressTitle: '시그니엘 서울',
                                                     content: {
-                                                        title: '천현정 ♥ 한영후 결혼합니다',
+                                                        title: '천현정 ♥ 한영후, 우리딸 결혼합니다',
                                                         description: '2022년 7월 9일 토요일 오후 6시 \n 시그니엘 서울 76층 그랜드볼룸',
                                                         imageUrl:
                                                         'https://drive.google.com/uc?id=1vx8DPvnbRzeVVuVOZ5vcCSB8D8P17T45',
