nav bar navy color test

--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
             			<div class="logo-wrapper">
                 			<!-- CSS LOGO --> 
                         	<a onclick="gtag('event', 'click', { 'event_category': 'menu', 'event_label': '홈' });" href="index.html">
-                    			<div class="css-logo">
-                   					<div class="css-logo-text">
-                                        H & Y
+                    			<div class="css-logo" >
+                   					<div class="css-logo-text" style="color:#254252; font-family: 'MaruBuri';">
+                                        <small style="color: #CA9A9F;">우리 딸, </small> 결혼합니다
                     				</div>
                     			</div>
                                 <div class="mobile-logo">
-                                    <divi class="mobile-logo-text">
-                                        HYEONJEONG & YOUNGHOO
+                                    <divi class="mobile-logo-text" style="color:#254252; font-family: 'MaruBuri';">
+                                        <small style="color: #CA9A9F;">우리 딸, </small> 결혼합니다
                                     </divi>
                                 </div>
                        		</a>
@@ -137,7 +137,7 @@
                 		</div>
                 		<!-- END of LOGO -->
                     
-                    	<div id="mobile-nav">
+                    	<div id="mobile-nav" style="color:#254252;">
                     		<i class="de-icon-menu"></i>
                     	</div>
     
