nav bar and kakao logo edit

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         		<a onclick="gtag('event', 'click', { 'event_category': 'menu', 'event_label': '사진첩' });" href="#gallery-section">사진첩</a>
                         	</li>
                             <li>
-                        		<a onclick="gtag('event', 'click', { 'event_category': 'menu', 'event_label': '결혼식 소개' });" href="#more-events">결혼식 소개</a>
+                        		<a onclick="gtag('event', 'click', { 'event_category': 'menu', 'event_label': '예식 안내' });" href="#more-events">예식 안내</a>
                             </li>
                             <li>
                             	<a onclick="gtag('event', 'click', { 'event_category': 'menu', 'event_label': '마음 전하실 곳' });" href="#gift-section">마음 전하실 곳</a>
@@ -1019,8 +1019,7 @@
                                     <div class="btninner">
                                         <button class="kakaopaybtn">
                                             <a href="https://qr.kakaopay.com/FTfVKHJcJ">
-                                                <img src="/images/brandicons/kakao-small-icon.png">
-                                                카카오페이 송금
+                                                <i class="de-icon-comment"></i>카카오페이 송금
                                             </a>
                                         </button>
                                     </div>
@@ -1044,8 +1043,7 @@
                                     <div class="btninner">
                                         <button class="kakaopaybtn">
                                             <a href="https://qr.kakaopay.com/281006011160391401003005">
-                                                <img src="/images/brandicons/kakao-small-icon.png">
-                                                카카오페이 송금
+                                                <i class="de-icon-comment"></i>카카오페이 송금
                                             </a>
                                         </button>
                                     </div>
@@ -1069,8 +1067,7 @@
                                     <div class="btninner">
                                         <button class="kakaopaybtn">
                                             <a href="https://qr.kakaopay.com/281006011160391401003005">
-                                                <img src="/images/brandicons/kakao-small-icon.png">
-                                                카카오페이 송금
+                                                <i class="de-icon-comment"></i>카카오페이 송금
                                             </a>
                                         </button>
                                     </div>
@@ -1271,11 +1268,9 @@
                                         <div class="animation delay1 fadeInUp">
                                             <div id="kakao-link">
                                                 <a id="kakao-link-btn" href="javascript:sendLink()">
-                                                    <img
-                                                    src="/images/brandicons/kakaolink_btn_medium.png"
-                                                    />
+                                                    <i class="de-icon-comment"></i>
                                                     카카오톡으로 초대장 공유하기
-                                                 </a>
+                                                </a>
                                                  <!-- 카카오톡으로 청첩장 공유하기 -->
                                                 <script>
                                                     Kakao.init('fe7c32f271402d80774a3578627d0042');
