interview btn kakaopay btn

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                             <button class="interview-btn animation fadeInUp">
                                 <a class="magnific-ajax" href="story.html">
                                     <span id="interview-btn-en"><i class="de-icon-pagelines"></i>INTERVIEW</span>
-                                    <span id="interview-btn-kr">두 사람의 이야기 더보기</span>
+                                    <span id="interview-btn-kr">두사람 이야기 더보기&nbsp;<i class="de-icon-right-open-big"></i></span>
                                 </a>
                             </button>
                             
