--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
                                     참석의 부담은 가지지 말아주시고, 
                                 </h3> 
                                 <h3 class="text-center animation fadeInUp">
-                                    저희의 소중한 시작을 위해 전해주시는 
+                                    두 사람의 소중한 시작을 위해 전해주시는 
                                 </h3>
                                 <h3 class="text-center animation fadeInUp">
                                     따뜻한 진심을 감사히 오래도록 간직하겠습니다. 
@@ -1257,7 +1257,10 @@
                                         </div>-->
             
                                         <div id="thank-you-kr" class="animation fadeInUp">
-                                            언제나 저희 곁을 따뜻하게 지켜주신
+                                            언제나 곁을 따뜻하게 지켜주신
+                                        </div>
+                                        <div id="thank-you-kr" class="animation fadeInUp">
+                                            양가 부모님과 사랑으로 응원해주신
                                         </div>
                                         <div id="thank-you-kr" class="animation fadeInUp">
                                             모든 분들께 감사드립니다
