owl carousel autoplay update

--- a/index.html
+++ b/index.html
@@ -967,6 +967,18 @@
                         </div>                        
                    </div><!--END of ROW-2-->   
               	</div>
+                <script>
+                    $(document).ready(function(){
+                        var owl = $(".owl-carousel");
+                        owl.owlCarousel({
+                            items: 1,
+                            autoplay: true,
+                            autoPlaySpeed: 5000,
+                            autoPlayTimeout: 5000,
+                            autoplayHoverPause: true
+                        });
+                    });
+                </script>
             </section>
 
             <!-- PHOTO DIVIDER
