--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
                 			<!-- CSS LOGO --> 
                         	<a onclick="gtag('event', 'click', { 'event_category': 'menu', 'event_label': '홈' });" href="index.html">
                     			<div class="css-logo" >
-                   					<div class="css-logo-text" style="color:#254252; font-family: 'MaruBuri';">
+                   					<div class="css-logo-text" style="font-family: 'MaruBuri';">
                                         <small style="color: #CA9A9F;">우리 딸, </small> 결혼합니다
                     				</div>
                     			</div>
                                 <div class="mobile-logo">
-                                    <divi class="mobile-logo-text" style="color:#254252; font-family: 'MaruBuri';">
+                                    <divi class="mobile-logo-text" style="font-family: 'MaruBuri';">
                                         <small style="color: #CA9A9F;">우리 딸, </small> 결혼합니다
                                     </divi>
                                 </div>
@@ -172,7 +172,7 @@
                 		</div>
                 		<!-- END of LOGO -->
                     
-                    	<div id="mobile-nav" style="color:#254252;">
+                    	<div id="mobile-nav">
                     		<i class="de-icon-menu"></i>
                     	</div>
     
