--- a/index.html
+++ b/index.html
@@ -971,8 +971,8 @@
                         </div>                        
                    </div><!--END of ROW-2-->   
               	</div>
-                <script>
-                    $(document).ready(function(){
+                <script type="text/javascript">
+                    $(window).on('load', function(){
                         var owl = $(".owl-carousel");
                         owl.owlCarousel({
                             items: 1,
