--- a/story.html
+++ b/story.html
@@ -6,15 +6,15 @@
             <h2 class="title-kr">  
                 두 사람의 이야기
             </h2>
-            <hr class="line-divider" style="margin: 30px 0px; color: red">        
+            <hr class="line-divider" style="margin: 30px 0px;">        
         </div>
         <!-- INTERVIEW CONTENTS -->
         <div class="interview-content text-justify">
             
             <div class="story-qna animation fadeInUp">
                 <h3><span class="qna-title">Q. 결혼을 앞둔 소감</span></h3>
-                <p><span style="color: #94A5C5;"><i class="de-icon-feather"></i>신랑&nbsp;</span>한영후<br>저, 드디어 장가갑니다! 오랜 시간 제 옆에서 함께 해주었던 사람과 이젠 매일을 함께할 수 있다고 생각하니 행복합니다. 저희 평생토록 잘 살겠습니다!</p>
-                <p><span style="color: #CA9A9F;"><i class="de-icon-feather"></i>신부&nbsp;</span>천현정<br>함께한 시간들이 행복했던 만큼 앞으로의 날들이 기대됩니다. 인생의 큰 전환점이 될 거라고 생각합니다. 앞으로도 서로 배려하고 사랑하면서 살아가겠습니다.</p>
+                <p><span class="groom-text"><i class="de-icon-feather"></i>신랑&nbsp;</span>한영후<br>저, 드디어 장가갑니다! 오랜 시간 제 옆에서 함께 해주었던 사람과 이젠 매일을 함께할 수 있다고 생각하니 행복합니다. 저희 평생토록 잘 살겠습니다!</p>
+                <p><span class="bride-text"><i class="de-icon-feather"></i>신부&nbsp;</span>천현정<br>함께한 시간들이 행복했던 만큼 앞으로의 날들이 기대됩니다. 인생의 큰 전환점이 될 거라고 생각합니다. 앞으로도 서로 배려하고 사랑하면서 살아가겠습니다.</p>
             </div>
             <div class="story-qna animation fadeInUp">
                 <h3><span class="qna-title">Q. 우리가 사랑한 시간</span></h3>
