blue css created

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
         <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
 
-        <!-- EDIT PART -->
+        <!-- EDIT PART LIST -->
             <!-- EDIT DATE -->
             <!-- EDIT NAME -->
             <!-- EDIT TEXT -->
@@ -1118,7 +1118,7 @@
                                     국민은행 1234567890
                                     <!-- EDIT NAME -->
                                     <span style="float: right; display: inline-block;"><small>어머니,</small>&nbsp;<b>박옥주</b></span>
-                                </div>]
+                                </div>
 
                                 <!-- Account Button --> 
                                 <div id="btnouter">
