--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- EDIT URL -->
         <meta property="og:url" content="https://elena0802.github.io/bride-wedding"/>
         <!-- EDIT DATE / EDIT PLACE -->
-        <meta property="og:description" content="7월 9일 토요일 오후 6시 시그니엘 호텔"/>
+        <meta property="og:description" content="2022.07.09(토) 18:00 시그니엘 서울"/>
         <meta property="og:image" content="images/share/link.jpg"/>
         <meta property="og:image:type" content="image/jpg"/>
         <meta property="og:image:width" content="1600"/>
@@ -1341,8 +1341,8 @@
                                                     address: '서울 송파구 올림픽로 300', 
                                                     addressTitle: '시그니엘 서울',
                                                     content: {
-                                                        title: '천현정 ♥ 한영후, 우리딸 결혼합니다',
-                                                        description: '2022년 7월 9일 토요일 오후 6시 \n 시그니엘 서울 76층 그랜드볼룸',
+                                                        title: '천현정 ♥ 한영후, 우리 딸 결혼합니다',
+                                                        description: '2022.07.09(토) 18:00 시그니엘 서울',
                                                         imageUrl:
                                                         'https://drive.google.com/uc?id=15KEi9XjldnQEa87BDFTRgdRuJTw_rueT',
                                                         link: {
