--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     	<div class="col-md-6">
                         
                         	<!--PHOTO-ITEM-->
-                        	<div class="photo-item frame-border animation FadeInRight">
+                        	<div class="photo-item frame-border animation fadeInRight">
                              	<!--PHOTO-->
                                	<img src="images/couple/1-crop.jpg" alt="신랑">       
                             </div><!--END of PHOTO-ITEM-->   
