--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                             </div><!--END of PHOTO-ITEM-->    
                             
                             <!-- EDIT NAME -->
-                            <div class="his-her-name">
+                            <div class="his-her-name animation fadeInLeft">
                         		<h2 class="text-center"><small class="bride-text">신부,&nbsp;</small>천현정</h2>
                             </div>                            
                             <!-- EDIT TEXT -->
@@ -386,7 +386,7 @@
                             </div><!--END of PHOTO-ITEM-->   
                             
                             <!-- EDIT NAME -->
-                            <div class="his-her-name">
+                            <div class="his-her-name animation fadeInRight">
                         		<h2 class="text-center"><small class="groom-text">신랑,&nbsp;</small>한영후</h2>
                             </div> 
                             <!-- EDIT TEXT -->                           
