--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                             </div>                            
                             <!-- EDIT TEXT -->
                             <p class="blurb animation fadeInLeft text-left description">
-                                이화여대 약학대학을 졸업 후 글로벌 제약회사 임상시험 팀에서 일하고 있습니다. 대학 연합 프로그래밍 동아리에서 신랑을 처음 만났습니다. 스타트업과 프로젝트를 함께하며 서로가 인생을 같이 걸어갈 짝꿍이라는 걸 알게 되었습니다.
+                                이화여대 약학대학을 졸업 후 제약회사 임상시험 팀에서 일하고 있습니다. 대학 시절 동아리에서 신랑을 처음 만났고, 오랜 시간을 함께하며 서로가 인생을 같이 걸어갈 짝꿍이라는 걸 알게 되었습니다.
                             </p>
                             <br>
                         </div><!-- END OF BRIDE -->
@@ -391,7 +391,7 @@
                             </div> 
                             <!-- EDIT TEXT -->                           
                             <p class="blurb animation fadeInRight text-left description">
-                                12년전 미국으로 유학을 떠나 조지아공과대학에서 컴퓨터공학을 공부하고 소프트웨어 엔지니어로 IT 기업에서 일하고 있습니다. 병역의 의무를 다하기 위해 한국에 돌아온 뒤 지금의 신부를 만나 삶에 감사함을 느끼게 되었습니다.
+                                12년전 미국으로 유학을 떠나 조지아공과대학에서 컴퓨터공학을 공부하고 소프트웨어 엔지니어가 되었습니다. 병역의 의무를 위해 한국에 돌아온 뒤 지금의 신부를 만나 삶에 감사함을 느끼고 있습니다.
                             </p>
                             <br>
                         </div><!-- END OF GROOM -->
@@ -849,7 +849,7 @@
                         	<div class="col-md-offset-2 col-md-8 text-center animation fadeInUp">                   	
                 	 			<h3 class="title-en" style="opacity: 0.5;">d-day count</h3>
                                  <!-- EDIT NAME -->
-                                <h2 id="dont-miss-it-title">현정<i class="de-icon-heart pink-heart"></i>&nbsp;영후의 결혼식까지</h2>           
+                                 <h2 id="dont-miss-it-title">한영후<span style="font-family: 'EB Garamond', sans-serif; font-weight: 400;">&nbsp;&amp;&nbsp;</span>천현정의 결혼식까지</h2>           
                                 
                      		</div>
                      	</div>
@@ -1315,7 +1315,7 @@
                         				</div>
                                         <!-- EDIT NAME -->
 										<div id="footer-couple-name" class="animation fadeInUp">
-                                			현정 &amp; 영후
+                                			한영후<span style="font-family: 'EB Garamond', sans-serif; font-weight: 400;">&nbsp;&amp;&nbsp;</span>천현정
                                 		</div>
                      				</div>
                      			</div>
